--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "axios": "*",
+    "redux": "*",
+    "redux-saga": "*",
     "@rneui/base": "4.0.0-rc.7",
+    "react-redux": "9.0.0",
+    "@types/react": "18.2.41",
     "@rneui/themed": "*",
+    "@reduxjs/toolkit": "*",
+    "@types/react-dom": "18.2.17",
     "@expo/vector-icons": "^14.0.3",
     "react-native-paper": "4.9.2",
     "react-native-element": "*",
@@ -22,13 +29,7 @@
     "@react-navigation/native": "*",
     "react-native-gesture-handler": "~2.16.1",
     "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "4.10.5",
-    "@types/react": "18.2.41",
-    "@types/react-dom": "18.2.17",
-    "@reduxjs/toolkit": "*",
-    "react-redux": "9.0.0",
-    "redux": "*",
-    "redux-saga": "*"
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
